[package]
name = "rust-timeouts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elasticsearch = "7.14.0-alpha.1"
postgres = "*"
redis = "*"
reqwest = "*"
tokio = { version = "*", features = ["full"] }
ureq = { version = "*" }
url = { version = "*" }
