[package]
name = "rust-timeouts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "*"
awc = "*"
curl = "*"
elasticsearch = "8.17.0-alpha.1"
hyper = { version = "0", features = ["full"] }
postgres = "*"
redis = "0.23"
reqwest = "*"
sqlx = { version = "*", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "*", features = ["full"] }
ureq = { version = "*" }
url = { version = "*" }
